final fix: remove react 19 and fix loading

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="initial-loader">
@@ -69,5 +70,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
     <script type="text/babel" src="index.tsx" data-type="module"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
